--- a/Demo.Linux/Demo.Linux.csproj
+++ b/Demo.Linux/Demo.Linux.csproj
@@ -3,14 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <RuntimeHostConfigurationOption Include="System.Globalization.Invariant" Value="true" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Landon.Models\Landon.Models.csproj" />
-  </ItemGroup>
-
 </Project>
