--- a/Landon.Api/Landon.Api.csproj
+++ b/Landon.Api/Landon.Api.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
+    <PackageReference Include="Faker.Data" Version="1.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Landon.Data\Landon.Data.csproj" />
     <ProjectReference Include="..\Landon.Models\Landon.Models.csproj" />
   </ItemGroup>
